--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <![endif]-->
 </head>
 <body>
-  <h1>APs</h1>
+  <h1>Candidates</h1>
   <script type="text/x-handlebars">
     {{view VoteList.CreateCandidateView id="new-candidate" placeholder="What is their name?"}}
     
